[gd_scene load_steps=21 format=3 uid="uid://b2ld5a670r5ou"]

[ext_resource type="Script" uid="uid://qevgtdg1p1xn" path="res://scenes/game.gd" id="1_lnu2h"]
[ext_resource type="Script" uid="uid://b2are61o5mlyc" path="res://scenes/player.gd" id="1_uwrxv"]
[ext_resource type="Script" uid="uid://6558r7p5endt" path="res://scenes/ball.gd" id="2_yqjtg"]
[ext_resource type="Script" uid="uid://cb2vnt35l1n6n" path="res://scenes/enemy.gd" id="3_lbhrr"]
[ext_resource type="AudioStream" uid="uid://cbdwmbucmny6f" path="res://audio/paddle.wav" id="5_p57ef"]
[ext_resource type="AudioStream" uid="uid://c81smx4rusms7" path="res://audio/wall.wav" id="6_u5sy4"]
[ext_resource type="AudioStream" uid="uid://jomtennq1hp6" path="res://audio/goal.wav" id="7_u5sy4"]
[ext_resource type="AudioStream" uid="uid://c1vpjvqrlwp6t" path="res://audio/countdown_low.wav" id="8_0tnpc"]
[ext_resource type="AudioStream" uid="uid://qi25h7iaswu2" path="res://audio/countdown_high.wav" id="9_vtaks"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mwb40"]
size = Vector2(1886, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yqjtg"]
size = Vector2(46, 1281)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_80nbo"]
size = Vector2(20, 174)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e2o6t"]
size = Vector2(16, 16)

[sub_resource type="LabelSettings" id="LabelSettings_lnu2h"]
font_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0tnpc"]
bg_color = Color(0.250213, 0.250213, 0.250213, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="LabelSettings" id="LabelSettings_lbhrr"]
font_size = 80

[sub_resource type="LabelSettings" id="LabelSettings_iywne"]
font_size = 56

[sub_resource type="Animation" id="Animation_lbhrr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Countdown:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["3"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/Countdown:theme_override_font_sizes/font_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="Animation" id="Animation_lnu2h"]
resource_name = "countdown"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Countdown:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": ["3", "2", "1", "GO!"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/Countdown:theme_override_font_sizes/font_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 256, 1, 256, 0, 256, 0, 256]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iywne"]
_data = {
&"RESET": SubResource("Animation_lbhrr"),
&"countdown": SubResource("Animation_lnu2h")
}

[node name="Game" type="Node2D"]
script = ExtResource("1_lnu2h")

[node name="Bounds" type="Node2D" parent="."]

[node name="Top" type="StaticBody2D" parent="Bounds" groups=["Boundary"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/Top"]
position = Vector2(961, 28)
shape = SubResource("RectangleShape2D_mwb40")

[node name="Polygon2D" type="Polygon2D" parent="Bounds/Top"]
polygon = PackedVector2Array(18, 15, 1904, 15, 1904, 42, 18, 42)

[node name="Bottom" type="StaticBody2D" parent="Bounds" groups=["Boundary"]]
position = Vector2(0, 1017)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/Bottom"]
position = Vector2(961, 28)
shape = SubResource("RectangleShape2D_mwb40")

[node name="Polygon2D" type="Polygon2D" parent="Bounds/Bottom"]
polygon = PackedVector2Array(18, 15, 1904, 15, 1904, 42, 18, 42)

[node name="Left" type="Area2D" parent="Bounds"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/Left"]
position = Vector2(-27, 532.5)
shape = SubResource("RectangleShape2D_yqjtg")

[node name="Right" type="Area2D" parent="Bounds"]
position = Vector2(1975, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/Right"]
position = Vector2(-27, 532.5)
shape = SubResource("RectangleShape2D_yqjtg")

[node name="Player" type="CharacterBody2D" parent="." groups=["Mover", "Paddle"]]
position = Vector2(60, 540)
motion_mode = 1
script = ExtResource("1_uwrxv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_80nbo")
one_way_collision = true

[node name="Polygon2D" type="Polygon2D" parent="Player"]
position = Vector2(0, -77)
polygon = PackedVector2Array(-9, -10, 11, -10, 11, 164, -9, 164)

[node name="Enemy" type="CharacterBody2D" parent="." groups=["Mover", "Paddle"]]
position = Vector2(1870, 540)
script = ExtResource("3_lbhrr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_80nbo")

[node name="Polygon2D" type="Polygon2D" parent="Enemy"]
position = Vector2(0, -77)
polygon = PackedVector2Array(-9, -10, 11, -10, 11, 164, -9, 164)

[node name="Ball" type="Area2D" parent="." groups=["Mover"]]
physics_interpolation_mode = 1
position = Vector2(962, 540)
script = ExtResource("2_yqjtg")

[node name="PaddleSound" type="AudioStreamPlayer" parent="Ball"]
stream = ExtResource("5_p57ef")
volume_db = -10.0

[node name="WallSound" type="AudioStreamPlayer" parent="Ball"]
stream = ExtResource("6_u5sy4")
volume_db = -10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("RectangleShape2D_e2o6t")

[node name="Polygon2D" type="Polygon2D" parent="Ball"]
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Divider" type="ColorRect" parent="UI"]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = 22.0
offset_right = 3.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerScore" type="Label" parent="UI"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 960.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.641934, 0.641934, 0.641934, 1)
theme_override_font_sizes/font_size = 128
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyScore" type="Label" parent="UI"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -957.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.643137, 0.643137, 0.643137, 1)
theme_override_font_sizes/font_size = 128
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Countdown" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "3"
label_settings = SubResource("LabelSettings_lnu2h")

[node name="ReplayModal" type="Panel" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0tnpc")

[node name="WinnerText" type="Label" parent="UI/ReplayModal"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -263.0
offset_top = -186.0
offset_right = 264.0
offset_bottom = -76.0
grow_horizontal = 2
grow_vertical = 2
text = "Player 1 wins!"
label_settings = SubResource("LabelSettings_lbhrr")

[node name="PlayAgainText" type="Label" parent="UI/ReplayModal"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.0
offset_top = -15.0
offset_right = 184.0
offset_bottom = 142.0
grow_horizontal = 2
grow_vertical = 2
text = "Press any key
to play again"
label_settings = SubResource("LabelSettings_iywne")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_iywne")
}

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.75

[node name="PlayAgainTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GoalSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_u5sy4")
volume_db = -8.0

[node name="CountdownLowSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_0tnpc")
volume_db = -10.0

[node name="CountdownHighSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_vtaks")
volume_db = -10.0

[connection signal="area_entered" from="Bounds/Left" to="." method="_on_left_area_entered"]
[connection signal="area_entered" from="Bounds/Right" to="." method="_on_right_area_entered"]
[connection signal="body_entered" from="Ball" to="Ball" method="_on_body_entered"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
[connection signal="timeout" from="PlayAgainTimer" to="." method="_on_play_again_timer_timeout"]
